ENH: support multi-doc upload and review

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -14,6 +14,11 @@
              <h1 id="title">About</h1>
            </header>
            <p>Binarization of End User License Agreement Regression - BEULAR</p>
+           <h2>Usage</h2>
+            <p>You can upload one or more documents on the Scan Page</p>
+            <p>When you upload a document, the text is extracted and parsed to find clauses.</p>
+            <p>Once this process completes, you can scan the clauses using the model.</p>
+            <p>Once the predictions are ready, each clause for each document will be displayed. You can click on individual cards to inspect the model's decision and see which words/phrases influenced the model's decision. You can also provide feedback in the form of comments and agreeing or disagreeing with the prediction. If you've set your AWS credentials with this application and specified a pre-existing S3 bucket, that data will get pushed to cloud where you can perform additional model training!</p>
          </div>
       </div>
     </div>
