--- a/app/templates/includes/upload_doc.html
+++ b/app/templates/includes/upload_doc.html
@@ -16,7 +16,7 @@
 	<form method="post" action="/upload_doc" enctype="multipart/form-data">
 		<dl>
 			<p>
-				<input id="fileInput" type="file" name="file" autocomplete="off" required>
+				<input id="fileInput" type="file" name="file" multiple="" autocomplete="off" required>
 			</p>
 		</dl>
 		<p>
