--- a/app/static/styles/base.css
+++ b/app/static/styles/base.css
@@ -1,85 +1,104 @@
 html { 
-    position: relative; 
-    min-height: 100%; 
+  position: relative; 
+  min-height: 100%; 
   }
   
-  a#skipnav {
-    background: transparent;
-    color: #0059b3;
+a#skipnav {
+  background: transparent;
+  color: #0059b3;
+  left: 0px;
+  padding: 10px 15px;
+  position: absolute;
+  top: -70px;
+  width: 170px;
+  z-index: 100;
+  -webkit-transition: top 1s ease-out, background 1s linear;
+  -moz-transition: top 1s ease-out, background 1s linear;
+  transition: top 1s ease-out, background 1s linear; }
+  a#skipnav:focus {
+    background: white;
     left: 0px;
-    padding: 10px 15px;
+    outline: 0;
     position: absolute;
-    top: -70px;
-    width: 170px;
-    z-index: 100;
-    -webkit-transition: top 1s ease-out, background 1s linear;
-    -moz-transition: top 1s ease-out, background 1s linear;
-    transition: top 1s ease-out, background 1s linear; }
-    a#skipnav:focus {
-      background: white;
-      left: 0px;
-      outline: 0;
-      position: absolute;
-      top: 0px;
-      -webkit-transition: top 0.1s ease-in, background 0.5s linear;
-      -moz-transition: top 0.1s ease-in, background 0.5s linear;
-      transition: top 0.1s ease-in, background 0.5s linear; 
-  }
-  
-  .sr-only {
-    left: -10000px;
-    height: 1px;
-    overflow: hidden;
-    position: absolute;
-    top: auto;
-    width: 1px; 
-  }
-  
-  .btn-primary {
-    color: #FCF7F8;
-    background-color: #275DAD;
-    border-color: #275DAD
-  }
-  
-  .btn {
-    color: #FCF7F8;
-    background-color: #275DAD;
-    border-color: #275DAD;
-  }
-  
-  body { 
-    color: #555b64;
-    background-color: #FCFCFC;
-    margin-bottom: 60px;
-  }
-  
-  a:link {
-    color: #275DAD;
-  }
-  
-  a:visited {
-    color: #275DAD;
-  }
-  
-  a:hover {
-    color: #275DAD;
-  }
-  
-  a.nav-link.nav {
-    color: #CED3DC;
-  }
-  
-  li.active * {
-    color: #FCFCFC;
-  }
-  
-  .footer {
-    background-color: #343a40;
-    bottom: 0;
-    color: #FCFCFC;
-    position: absolute;
-    width: 100%;
-    height: 60px; /* Set the fixed height of the footer here */
-    line-height: 60px; /* Vertically center the text there */
-  }
+    top: 0px;
+    -webkit-transition: top 0.1s ease-in, background 0.5s linear;
+    -moz-transition: top 0.1s ease-in, background 0.5s linear;
+    transition: top 0.1s ease-in, background 0.5s linear; 
+}
+
+.sr-only {
+  left: -10000px;
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  top: auto;
+  width: 1px; 
+}
+
+.btn-primary {
+  color: #FCF7F8;
+  background-color: #275DAD;
+  border-color: #275DAD
+}
+
+.btn {
+  color: #FCF7F8;
+  background-color: #275DAD;
+  border-color: #275DAD;
+}
+
+body { 
+  color: #555b64;
+  background-color: #FCFCFC;
+  margin-bottom: 60px;
+}
+
+a:link {
+  color: #275DAD;
+}
+
+a:visited {
+  color: #275DAD;
+}
+
+a:hover {
+  color: #275DAD;
+}
+
+a.nav-link.nav {
+  color: #CED3DC;
+}
+
+li.active * {
+  color: #FCFCFC;
+}
+
+.footer {
+  background-color: #343a40;
+  bottom: 0;
+  color: #FCFCFC;
+  position: absolute;
+  width: 100%;
+  height: 60px; /* Set the fixed height of the footer here */
+  line-height: 60px; /* Vertically center the text there */
+}
+
+.thumbnail {
+  position:relative;
+  overflow:hidden;
+}
+ 
+.caption {
+    position:absolute;
+    top:0;
+    right:0;
+    background:rgba(90, 90, 90, 0.75);
+    width:100%;
+    height:100%;
+    padding:2%;
+    display: none;
+    text-align: left;
+    color:#fff !important;
+    z-index:2;
+}
   
