--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,8 +12,20 @@
             <header>
              <h1 id="title">BEULAR</h1>
             </header>
-            <p>Binarization of End User License Agreement Regression - BEULAR</p>
+            <p>Binarization of End User License Agreement Recommendations - BEULAR</p>
             <p>Using supervised machine learning to identify problematic clauses in End User License Agreements</p>
+         </div>
+      </div>
+      <div class="row d-flex justify-content-center text-center">
+         <div class="col-sm-4 text-center">
+            <div class="thumbnail">
+               <a href="{{ url_for('main.scan') }}">
+                  <div class="caption">
+                     <h4 class="">Upload and Scan your Documents!</h4>
+                  </div>
+                  <img src="{{ url_for('static', filename='images/upload.png') }}" class="img-fluid" alt="Upload Docuements">
+               </a>
+            </div>
          </div>
       </div>
     </div>
