--- a/app/templates/scan.html
+++ b/app/templates/scan.html
@@ -39,7 +39,7 @@
                 <input type="submit" value="Scan Document(s)" onclick="$('#loading').show();">
               </p>
             </form>
-            <div id="loading" style="display:none;"><img src="{{ url_for('static', filename='images/loading.gif') }}"" alt="Loading!"/></div>
+            <div id="loading" style="display:none;"><img class="img-fluid" src="{{ url_for('static', filename='images/loading.gif') }}"" alt="Loading!"/></div>
           </div>
         
         {% elif results %}
@@ -98,7 +98,7 @@
                               </button>
                             </div>
                             <div class="modal-body">
-                              <p>Below, you can see the weight of each word/phrase in the model's decision. Hover over highlighted words to see that word's influence.</p>
+                              <p>Below, you can see the influential words/phrases for the model's decision.<span style="background-color: hsl(120, 100.00%, 50.0%); opacity: 0.9975570440292358" title="0.9975570440292358">Green words/phrases</span> indicate positive correlation with the prediction whereas <span style="background-color: hsl(0, 100.00%, 50.0%); opacity: 0.9929927587509155" title="-0.9929927587509155">red words/phrases</span> indicate negative correlation with the prediction.</p>
                               <div>{{r['expl']|safe}}</div>
                               <div class="form-group">
                                 <label for="message-text" class="col-form-label">Feedback for Model retraining:</label>
